--- a/client/src/app/ui/globals.css
+++ b/client/src/app/ui/globals.css
@@ -15,3 +15,17 @@ body {
   padding: 0;
   background-color: var(--secondary-color-white);
 }
+
+@layer components {
+  .btn {
+      @apply flex gap-2 items-center justify-center py-2 px-4 font-semibold shadow-md rounded-lg;
+  }
+
+  .btn.btn-light {
+      @apply bg-white text-gray-500;
+  }
+
+  .btn.btn-success {
+      @apply text-white bg-green-600 shadow-green-400/10
+  }
+}
