style: added grid and scrollbar styles

--- a/client/src/app/ui/globals.css
+++ b/client/src/app/ui/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 :root {
-  --primary-color-blue: #2757E6;
+  --primary-color-blue: #2757e6;
   --primary-color-green: #6BBE55;
   --secondary-color-black: #171717;
   --secondary-color-white: #FBFCFF;
