--- a/client/src/app/ui/globals.css
+++ b/client/src/app/ui/globals.css
@@ -10,6 +10,7 @@
   --secondary-color-gray: #97989b;
 }
 
+html,
 body {
   margin: 0;
   padding: 0;
@@ -17,7 +18,7 @@ body {
 
 @layer components {
   .btn {
-    @apply flex gap-2 items-center justify-center py-2 px-4 font-semibold shadow-md rounded-lg;
+    @apply flex items-center justify-center rounded-full;
   }
 
   .btn.btn-light {
@@ -48,43 +49,55 @@ body {
 
 .filter-white {
   filter: none;
-  transition-duration: 300ms;
+  transition: filter 300ms;
 }
 
 .link:hover .filter-white {
   filter: invert(1) grayscale(1) brightness(10);
-  transition-duration: 300ms;
+  transition: filter 300ms;
+}
+
+.dropdown-content {
+  transform: scale(0, 0);
+  transform-origin: top center;
+  transition: all 1s ease-out;
+  opacity: 0;
+}
+
+.dropdown-content.open {
+  transform: scale(1, 1);
+  opacity: 1;
 }
 
 .arrow {
-  width: 0.7rem;
-  height: 0.7rem;
+  width: 0.5rem;
+  height: 0.5rem;
   box-sizing: border-box;
   transform: rotate(135deg);
 }
 
 .arrow::before {
-  content: '';
+  content: "";
   width: 100%;
   height: 100%;
-  border-width: .4vmin .4vmin 0 0; /* Hacer la flecha más delgada */
+  border-width: 0.209vmin 0.209vmin 0 0;
   border-style: solid;
   border-color: var(--secondary-color-black);
-  transition: .2s ease;
+  transition: 0.2s ease;
   display: block;
   transform-origin: 100% 0;
 }
 
 .arrow::after {
-  content: '';
+  content: "";
   float: left;
   position: relative;
   top: -100%;
   width: 100%;
   height: 100%;
-  border-width: 0 .4vmin 0 0; /* Hacer la flecha más delgada */
+  border-width: 0 0.209vmin 0 0;
   border-style: solid;
   border-color: var(--secondary-color-black);
   transform-origin: 100% 0;
-  transition:.2s ease;
+  transition: 0.2s ease;
 }
