style: add svgs in dropdown and home. shange some svgs in the footer

--- a/client/src/app/ui/globals.css
+++ b/client/src/app/ui/globals.css
@@ -34,26 +34,21 @@ body {
 }
 
 .filter-white {
-  filter: invert(5%) sepia(6%) saturate(24%) hue-rotate(358deg) brightness(98%) contrast(91%);;
+  filter: invert(5%) sepia(6%) saturate(24%) hue-rotate(358deg) brightness(98%)
+    contrast(91%);
   transition: filter 300ms;
 }
 
 .link:hover .filter-white {
-  filter: invert(44%) sepia(90%) saturate(7131%) hue-rotate(225deg) brightness(95%) contrast(89%);
+  filter: invert(44%) sepia(90%) saturate(7131%) hue-rotate(225deg)
+    brightness(95%) contrast(89%);
   transition: filter 300ms;
 }
 
-.dropdown-content {
-  transform: scale(0, 0);
-  transform-origin: top center;
-  transition: all 1s ease-out;
-  opacity: 0;
+.username:hover {
+  color: var(--primary-color-blue);
 }
 
-.dropdown-content.open {
-  transform: scale(1, 1);
-  opacity: 1;
-}
 
 .arrow {
   width: 0.5rem;
